--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ The R package **optimLanduse** provides functions for easy and systematic applic
 
 <h3><a name="3. Input und Output">2. Detailed Description of the Functions’ In- and Outputs</a></h3>
 
-This chapter provides a brief overview over the package functions (Fig. 1). For detailed information about methodological background, functions, and workflow please also refer to Husmann et al. (n.d.). We further refer the reader to the respective help pages of the package for more information.
+This chapter provides a brief overview of the package functions (Fig. 1). For detailed information on methodological background, functions, and workflow please also refer to Husmann et al. (n.d.). We further refer the reader to the respective help pages of the package for more information.
 
 The stable version of the package can be installed using the CRAN server. The development version can be found on the GitHub project page.
 
@@ -56,7 +56,7 @@ install.packages("optimLanduse")
 
 The *initScenario()* function combines the user settings with the data into an *optimLanduse*-object ready for solving. The following input data are required:
 
--   *coefTable*: The package is only capable of processing a long-oriented type of data structure (Table 1). All combinations of land-cover (landUse) alternatives and indicators have to be listed vertically. Each row must contain the average expectation, the uncertainty, and the direction (more is better/ less is better) of the respective land-cover and indicator combination. The column names of the table must exactly follow the nomenclature displayed below. You also find this format in the built-in example tables **exampleGosling.xlsx** or **exampleEmpty.xlsx**. The help files of the *exampleData()* and *initScenario()* functions contain more details regarding the required data format. Also an empty template incl. the predefined headings can be accessed via *exampleData("exampleEmpty.xlsx")*. All further columns will be dropped if passed.
+-   *coefTable*: The package is only capable of processing a long-oriented type of data structure (Table 1). All combinations of land-cover (landUse) alternatives and indicators must be listed vertically. Each row must contain the average expectation, the uncertainty, and the direction (more is better/ less is better) of the respective land-cover and indicator combination. The column names of the table must exactly follow the nomenclature displayed below. You can also find this format in the built-in example tables **exampleGosling.xlsx** or **exampleEmpty.xlsx**. The help files of the *exampleData()* and *initScenario()* functions contain more details regarding the required data format.  An empty template incl. the predefined headings can be accessed via *exampleData("exampleEmpty.xlsx")*. All further columns in the coefTable will be dropped.
 
 *Table 1: Example of the data set from Gosling et al. (2020) to illustrate the required data structure.*
 
@@ -68,7 +68,7 @@ The *initScenario()* function combines the user settings with the data into an *
 
 -   *uValue*: The argument for the uncertainty level ($f_u$, Equation 4 in Husmann et al. (n.d.)). A higher uValue reflects a higher risk aversion of the decision maker. See the help file of the *initScenario* function for more details.
 
--   *optimisticRule*: Specifies whether the optimistic contributions of each indicator should be defined either directly by their average, or by their average plus their uncertainty (if more is better) or minus its uncertainty (if less is better). The former option is most frequently used in recent literature and therefore builds the default.
+-   *optimisticRule*: Specifies whether the optimistic contributions of each indicator should be defined either directly by their average, or by their average plus their uncertainty (if more is better) or minus their uncertainty (if less is better). The former option is most frequently used in recent literature and therefore builds the default.
 
 -   *fixDistance*: Optional numeric value that defines distinct uncertainty levels for the calculation of the uncertainty space and the averaged distances of a certain land-cover composition (see Equation 9 in Husmann et al. (n. d.)). Passing NA disables fixDistance. The uncertainty space is then defined by the uValue.
 
@@ -76,14 +76,14 @@ The *initScenario()* function combines the user settings with the data into an *
 
 The *solveScenario()* function takes the initialized *optimLanduse*-object and only a few optional solver-specific arguments.
 
--   *digitsPrecision*: Provides the only possibility for the user to influence the calculation time. As the solving process has no stochastic element, the calculation times depend practically on the number of digits calculated only.
+-   *digitsPrecision*: Provides the only possibility for the user to influence the calculation time. As the solving process has no stochastic element, the calculation times depend almost only on the number of digits calculated only.
 
--   *lowerBound* & *upperBound*: Optional bounds for the land-cover alternatives. The lower bound must be 0 or a vector with lower bounds in the dimension of the number of land-cover alternatives. The upper bound, respectively, 1 or a vector with upper bounds. Choosing 0 and 1 (the defaults) as boundaries for all decision variables, means that no land-cover alternative is forced into the portfolio and that no land-cover alternative is assigned a maximum.
+-   *lowerBound* & *upperBound*: Optional bounds for the land-cover alternatives. The lower bound must be 0 or a vector with lower bounds in the dimension of the number of land-cover alternatives. The upper bound, respectively, must be 1 or a vector with upper bounds. Choosing 0 and 1 (the defaults) as boundaries for all decision variables, means that no land-cover alternative is forced into the portfolio and that no land-cover alternative is assigned a maximum.
 
-The returned *list with results* contains different Information of the optimization model. It firstly repeats the settings of the *initScenario()*. These include:
+The returned *list with results* contains different information on the optimization model. It first repeats the settings of the *initScenario()*. These include:
 
--   *scenarioSettings*: Data frame with *uValue* and *optimisticRule* used.
--   *scenarioTable*: Data frame with one row for each combination of worst-case and best-case outcomes of all indicators (thus the number of rows equals the number of scenarios $N_S$ in Husmann et al (n.d.)). The columns contain relevant calculation steps of the optimization program. *adjSem\** are the uncertainty adjusted indicators ($R_{liu}$ in Husmann et al. (n.d.)). *minAdjSem* are the minimal uncertainty adjusted indicators $min(R_{liu})$ and $max(R_{liu})$ the maximal uncertainty adjusted indicators. diffAdjSem are the range between these uncertainties adjusted indicators $\delta_{\text{min,max}_{iu}}$.
+-   *scenarioSettings*: A data frame with the *uValue* and the *optimisticRule*.
+-   *scenarioTable*: A data frame with one row for each combination of worst-case and best-case outcomes of all indicators (thus the number of rows equals the number of scenarios $N_S$ in Husmann et al (n.d.)). The columns contain relevant calculation steps for the optimization program. *adjSem\** are the uncertainty adjusted indicators ($R_{liu}$ in Husmann et al. (n.d.)). *minAdjSem* are the minimum uncertainty adjusted indicators $min(R_{liu})$ and $max(R_{liu})$ the maximum uncertainty adjusted indicators. diffAdjSem are the range between these uncertainty adjusted indicators $\delta_{\text{min,max}_{iu}}$.
 -   *coefObjective*: The optimization program is translated into a linear program with $N_L$ (number of land-cover options) coefficients for the inner solution. The inner solution is solved using the *lpSolveAPI()* function of the **lpSolveApi** package. *coefObjective* is the data frame that contains these coefficients.
 -   *coefConstraint*: A data frame with the respective constraints for the inner solution solved by *lpsolveAPI()*.
 -   *distance*: The distance of each scenario to its own theoretically best-achievable contribution (reference). See Equation 3 in Husmann et al. (n.d.).
@@ -91,17 +91,17 @@ The returned *list with results* contains different Information of the optimizat
 This is followed by a summary of the results of the optimization:
 
 -   $\beta$: The maximum distance of the worst performing scenario (Equation 1 in Husmann et al. (n.d.)).
--   *landUse*: The resulting land-cover composition in the optimum.
+-   *landUse*: The resulting land-cover composition after the optimization.
 
 #### Post-Processing
 
--   *calcPerformance()*: Attaches the portfolio performances of all indicators and scenarios as a data frame. The data can be used for straightforward visualization of the performance (e.g. Fig. 3). The performance is defined as the distance to the maximum achievable level for each indicator and uncertainty scenario.
+-   *calcPerformance()*: Attaches the portfolio performances of all indicators and scenarios as a data frame to the soved optimLanduse object. The data can be used for straightforward visualization of the performance (e.g. Fig. 3). The performance is defined as the distance to the maximum achievable level for each indicator and uncertainty scenario.
 
 <h3><a name="5. Beispielhafte Anwendung">3. Example Application</a></h3>
 
-We here present the basic workflow on a literature example. Aim of this chapter is to introduce the functionality of the packages' functions and to explain the relevant in- and output on the example of a use-case in Eastern Panama. The data of this study is accessible in the *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the **optimLanduse** package. It can be accessed via *exampleData("exampleGosling.xlsx")*. The data integrated in the package comes already in the required *optimLanduse* format, such that it can be used without any data processing.
+We here present the basic workflow on a literature example. The aim of this chapter is to introduce the functionality of the packages' functions and to explain the relevant in- and output on the example of a use-case in Eastern Panama. The data of this study can be accessed in *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the **optimLanduse** package. It can be accessed via *exampleData("exampleGosling.xlsx")*. The data integrated in the package already comes in the required *optimLanduse* format, so that it can be used without any data processing.
 
-Enriching agricultural farms with agroforestry has been promoted as a means to enhance ecosystem functioning of farms in Panama, while maintaining important economic functions. Gosling et al. (2020) therefore used the here presented optimization model to understand smallholder farmers' perceptions and values of agroforestry systems. They identified 10 relevant indicators for a predefined set of land-cover alternatives, which represent the farmers' goals (such as long and short-term income or labor demand, as well as carbon and water regulation). A survey with local farmers provided the empirical basis in the form of the farmer's expectations on the indicator performance of each land-cover (arithmetic mean) and its uncertainties (using the standard error of the mean across the survey's respondents). Descriptions of the land-cover alternatives and indicators can be found in Tables 1 and 2 in Gosling et al. (2020).
+Enriching agricultural farms with agroforestry has been promoted as a means to enhance ecosystem functioning in farms in Panama, while maintaining important economic functions. Gosling et al. (2020) therefore used the here presented optimization model to understand smallholder farmers' perceptions and values of agroforestry systems. They identified 10 relevant indicators for a predefined set of land-cover alternatives, which represent the farmers' goals (such as long and short-term income or labor demand, as well as carbon and water regulation). A survey with local farmers provided the empirical basis in the form of the farmer's expectations on the indicator performance of each land-cover (arithmetic mean) and its uncertainties (using the standard error of the mean across the survey's respondents). Descriptions of the land-cover alternatives and indicators can be found in Tables 1 and 2 in Gosling et al. (2020).
 
 ### Loading Required Packages and Importing the Data
 
@@ -134,7 +134,7 @@ init <- initScenario(coefTable = dat,
                      # 3 is the default
 ```
 
-In line with Gosling et al. (2020), we chose the expected value of the indicator as optimistic outcomes *(optimisticRule = "expectation")* and the same uncertainty level for the calculation of the averaged distances and the uncertainty space (*fixDistance = NA*, see Equations 4 and 9 in Husmann et al. (n.d.) for more details).
+In line with Gosling et al. (2020), we chose the expected value of the indicators as optimistic outcomes *(optimisticRule = "expectation")* and the same uncertainty level for the calculation of the averaged distances and the uncertainty space (*fixDistance = NA*, see Equations 4 and 9 in Husmann et al. (n.d.) for more details).
 
 ### Solving the Initialized *optimLanduse* Object
 
@@ -162,7 +162,7 @@ result$landUse %>% gather(key = landCoverOption,
 
 *Fig. 2: Composition of the optimized farm (based on data of Gosling et al. (2020)), including all indicators. Each land-cover option is shown in an allocated share (%).*
 
-The resulting optimized farm composition (Fig. 2) corresponds to Fig. 3 ($f_u=2$) in Gosling et al. (2020). It can be seen that the farm composition that best contributes to all 10 indicators (i.e. the multifunctional portfolio) is dominated by silvopasture and forest. According to Gosling et al. (2020), this reveals the potential of agroforestry to serve as a compromise solution to fulfill multiple ecological and economic functions. Recently, however, the average farm portfolio of the surveyed farms was mainly composed of pasture and cropland with only a small share of forest (14%). This reveals that not all of the selected objectives (and their weights) currently drive farmer's land-cover decisions. The optimization approach can then be used to dive deeper into the effect of different goals on the resulting optimized land-cover composition and the effects of uncertainty.
+The resulting optimized farm composition (Fig. 2) corresponds to Fig. 3 ($f_u=2$) in Gosling et al. (2020). It can be seen that the farm composition that best contributes to all 10 indicators (i.e. the multifunctional portfolio) is dominated by silvopasture and forest. According to Gosling et al. (2020), this reveals the potential of agroforestry to serve as a compromised solution to fulfill multiple ecological and economic functions. Recently, however, the average farm portfolio of the surveyed farms was mainly composed of pasture and cropland with only a small share of forest (14%). This reveals that not all of the selected objectives currently drive farmer's land-cover decisions. The optimization approach can then be used to dive deeper into the effect of different goals on the resulting optimized land-cover composition and the effects of uncertainty.
 
 ### Calculating the Portfolio Performances of the Optimized *optimLanduse* Object
 
@@ -196,13 +196,13 @@ ggplot(performance$scenarioTable,
            vjust = -1)
 ```
 
-*Fig. 3: The performances of each of the 10 indicators for the ideal farm composition. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performances* $(1-\beta)$*, thus the robust feasible solution of the program (Equation 1 in Husmann et al (n.d.)).*
+*Fig. 3: The performances of each of the 10 indicators for the ideal farm composition. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performances* $(1-\beta)$*, and thus the robust feasible solution of the program (Equation 1 in Husmann et al (n.d.)).*
 
-Fig. 3 can be used to further explore the effects of the indicators on the modeled land-cover decisions. Looking at the performances of this multifunctional farm reveals, which indicator equals $\beta$ and therefore defines the result (Equation 1 in Husmann et al. (n.d.)).
+Fig. 3 can be used to further explore the effects of the indicators on the modeled land-cover decisions. Looking at the performances of this multifunctional farm reveals which indicator equals $\beta$ and therefore defines the result (Equation 1 in Husmann et al. (n.d.)).
 
-Here, the worst performing scenarios of indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) have equally the largest distances. It can be seen that the portfolio is apparently driven by these 3 indicators. In the worst-performing uncertainty scenarios, these 3 indicators show the maximum distances across all indicators. In other words, the guaranteed performance $1-\beta$ of the portfolio is defined by these 3 indicators. A full list with performances of all individual scenarios is provided by the output *scenarioTable* after using the *calcPerformance()* function (Table 2).
+Here, the worst performing scenarios of indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) have equally the largest distances. It can be seen that the portfolio appears to be driven by these 3 indicators. In the worst-performing uncertainty scenarios, these 3 indicators show the maximum distances across all indicators. In other words, the guaranteed performance $1-\beta$ of the portfolio is defined by these 3 indicators. A full list with performances of all individual scenarios is provided by the output *scenarioTable* after using the *calcPerformance()* function (Table 2).
 
-It can be followed that these 3 indicators are crucial when discussing future land-cover alternatives and concepts. According to Gosling et al. (2020), this result is in line with current observed behavior, since the need for short-term liquidity mainly drives decisions of smallholder farmers in the study region. Intermediate-term economic success is not relevant until consumption of the household is secured. While the performances of indicator 1 differ relatively strong among the scenarios, the performances of indicators 3 and 8 are quite similar within all scenarios. This is attributed to the larger standard errors of this indicator. It thus may be worth investigating the particular reasons for this high uncertainty of indicator 1.
+It can be understood that these 3 indicators are crucial when discussing future land-cover alternatives and concepts. According to Gosling et al. (2020), this result is in line with current observed behavior since the need for short-term liquidity mainly drives decisions of smallholder farmers in the study region. Intermediate-term economic success is not relevant until the household consumption is secured. While the performances of indicator 1 differ relatively strongly among the scenarios, the performances of indicators 3 and 8 are quite similar within all scenarios. This is attributed to the larger standard errors of this indicator. Thus, it may be worth investigating the particular reasons behind this high uncertainty for indicator 1.
 
 ```{r, message=FALSE, warning=FALSE}
 performance$beta
@@ -265,9 +265,9 @@ ggplot(performance_current$scenarioTable,
 
 *Fig. 4: The performance of each of the 10 indicators for the result of the currently observed land-cover composition. The colored points are the achieved levels of the indicators of all scenarios s. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, thus the robust feasible solution of the program (Equation 1 in (Husmann et al, n.d.)).*
 
-Setting the arguments for the lower and upper bounds exactly to the currently observed land-cover composition forces a solution that corresponds to the current land-cover composition (Fig. 4). It allows for comparing and evaluating the differences of the optimized land-cover composition with the currently observed composition. Comparing e.g. the guaranteed performances $1-\beta$ provides objective measure how an optimization enhances the achievements of the overall performance. A deeper look at the performances of the indicators reveals which indicators particularly benefit from optimization. Due to the compromise nature of the approach, indicators can also fall off in the optimized portfolio when compared to the current land-cover composition.
+Setting the arguments for the lower and upper bounds exactly to the currently observed land-cover composition forces a solution that corresponds to the current land-cover composition (Fig. 4). It allows for the comparison and evaluation the differences of the optimized land-cover composition with the currently observed composition. Comparing e.g. the guaranteed performances $1-\beta$ provides an objective measure of how an optimization enhances the achievements of the overall performance. A deeper look at the performances of the indicators reveals which indicators particularly benefit from optimization. Due to the compromise nature of the approach, indicators can also perfom worse in the optimized portfolio when compared to the current land-cover composition.
 
-Amounting to 0.387, the guaranteed performance of the multifunctional portfolio is considerably higher then the guaranteed performance of the current land-cover composition (0.089). Each of the indicators considered is thus fulfilled by at least 38.7% compared to its individual achievable level in the optimized portfolio. The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multifunctional portfolio (Fig. 3) reveals that, for example, the performance of the financial stability is significantly higher in the optimized portfolio. The performance of meeting households needs and liquidity, for example, decreases significantly. The price to be paid for the best-possible compromise is thus a fundamentally lower performance of the both indicators that approximate the immediate economic success. The generally desirable multifunctional portfolio therefore does not promise immediate economic success for the farmers.
+Amounting to 0.387, the guaranteed performance of the multifunctional portfolio is considerably higher than the guaranteed performance of the current land-cover composition (0.089). Each of the indicators considered is thus fulfilled by at least 38.7% compared to its individual achievable level in the optimized portfolio. The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multifunctional portfolio (Fig. 3) reveals that, for example, the performance of the financial stability is significantly higher in the optimized portfolio. The performance of meeting households needs and liquidity, for example, decreases significantly. The price to be paid for the best-possible compromise is thus a fundamentally lower performance of both indicators that approximate the immediate economic success. The generally desirable multifunctional portfolio therefore does not promise immediate economic success for the farmers.
 
 <h3><a name="6. Erweiterte Anwendung">4. Sophisticated Application</a></h3>
 
@@ -305,13 +305,13 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
 
 *Fig. 5: Theoretically ideal farm compositions under increasing levels of uncertainty.*
 
-Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in Equation 4 (Husmann et al., n.d.)) gives the sensitivity of the land-cover compositions towards increasing risk aversion of the farmers. Fig. 5 corresponds to Fig. 3 in Gosling et al. (2020). The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is relatively stable across different uncertainty levels (Fig. 5). Comparing portfolios of uvalue 0 with uvalue 3, the share of forest decreases slightly from 41.2% to 34.3% and silvopasture from 45.9% to 44.9%. The share of crops decreases from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and of plantation from 0% to 10.2%.
+Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in Equation 4 (Husmann et al., n.d.)) provides the sensitivity of the land-cover compositions to an increasing risk aversion of the farmers. Fig. 5 corresponds to Fig. 3 in Gosling et al. (2020). The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is relatively stable across different uncertainty levels (Fig. 5). Comparing portfolios of uValue 0 with uValue 3, the share of forest decreases slightly from 41.2% to 34.3% and silvopasture from 45.9% to 44.9%. The share of crops decreases from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and that of plantation from 0% to 10.2%.
 
-Alley cropping does not appear in any portfolio at any uncertainty level. Alley cropping does, on average, not contribute best to any indicator. At least one other land-cover type better provides each indicator. It also contributes the worst (highest) to management complexity. This overall negative contribution does not change with increasing uncertainty levels. By trend, higher uncertainty levels lead to more diverse portfolios. The uncertainty spaces of all indicators increase with increasing uncertainty levels. These broadened individual uncertainty spaces then lead to a broader state space with a higher number of possible candidates for lowest-performing scenarios (i.e. scenarios that can under lower uncertainty not become part of the solution, as their distances could not be the maximum distance of any land-cover composition). Plantation, for example, is not part of the portfolio till an uncertainty level of 1.5. It only provides best to the long-term income while providing by far worst to the general preferences and also providing generally only minor contributions to the indicators. Under an uncertainty level of 1, for example, plantation provides the worst to the general preferences even if all other indicators are considered as worst-possible contributions. This ranking, however, changes after uncertainty levels above 1.5. The worst-possible contribution of forests then contributes worst among all land-cover types.
+Alley cropping does not appear in any portfolio at any uncertainty level. It does not, on average, contribute best to any indicator. At least one other land-cover type contributes better each indicator. It also contributes the worst (highest) to management complexity. This overall negative contribution does not change with increasing uncertainty levels. By trend, higher uncertainty levels lead to more diverse portfolios. The uncertainty spaces of all indicators increase with increasing uncertainty levels. These broadened individual uncertainty spaces then lead to a broader state space with a higher number of possible candidates for lowest-performing scenarios (i.e., scenarios that can under lower uncertainty not become part of the solution, as their distances could not be the maximum distance of any land-cover composition). Plantation, for example, is not part of the portfolio till an uncertainty level of 1.5. It only provides the best to the long-term income while providing the worst by far to the general preferences. It also generally only provides minor contributions to the indicators. Under an uncertainty level of 1, for example, plantation provides the worst to the general preferences even if all other indicators are considered as worst-possible contributions. This ranking, however, changes after uncertainty levels above 1.5. The worst-possible contribution of forests then has the worst contribution worst among all land-cover types.
 
 ### Selecting Specific Indicator Bundles - Investigating the Indicator's Sensitivities
 
-The sensitivity of the land-cover compositions towards indicators or groups of indicators can be analyzed by either excluding or adding indicators of interest and interpreting the differences in the results of the distinct optimization. To do so, individual and independent optimizations are carried out in- and excluding different (sets of) indicators. The set of indicators considered is representative for the stakeholders' preferences and perceptions. Comparison of optimal land-cover compositions under differing indicator combinations may help to understand how stakeholders' preferences design the land-cover compositions. The following code exemplifies optimizations for three subsets of indicators presented in Gosling et al. (2020). The shiny app of *optimLanduse* (<http://134.76.17.50/optimlanduse_shiny/>) provides straightforward functionality to define sets of indicators with a single click. Further explanation and instructions are given in the app.
+The sensitivity of the land-cover compositions towards indicators or groups of indicators can be analyzed by either excluding or adding indicators of interest and interpreting the differences in the results of the distinct optimization. To do so, individual and independent optimizations are carried out in- and excluding different (sets of) indicators. The set of indicators considered is representative of the stakeholders' preferences and perceptions. Comparison of optimal land-cover compositions under differing indicator combinations may help to understand how stakeholders' preferences design the land-cover compositions. The following code exemplifies optimizations for three subsets of indicators presented in Gosling et al. (2020). The shiny app of *optimLanduse* (<http://134.76.17.50/optimlanduse_shiny/>) provides straightforward functionality to define sets of indicators with a single click. Further explanation and instructions are given in the app.
 
 ```{r, fig.height = 3, fig.width = 4, warning=FALSE}
 dat_socioeconomic <- dat[!dat$indicator %in% c("Protecting soil resources",
@@ -380,7 +380,7 @@ ggplot(performance_socioeconomic$scenarioTable,
            vjust = -1)
 ```
 
-*Fig. 7: The performance of each of the socio-economic indicators. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, thus the robust feasible solution of the program (Equation 1 in (Husmann et al, n.d.)).*
+*Fig. 7: The performance of each of the socio-economic indicators. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, and thus the robust feasible solution of the program (Equation 1 in (Husmann et al, n.d.)).*
 
 An analysis of the performance of the socio-economic indicators shows that the performances of the three relevant indicators equal the multifunctional portfolio (Fig. 7). The result is still defined by financial stability, investment costs and meeting household needs. Consequently, the guaranteed performance $(1-\beta)$ also equals the multifunctional portfolio. Therefore, this socio-economic portfolio also does not perfectly reflect the currently observed land-cover composition. This means that further indicators appear to be relevant for the actual farmers' decisions.
 
@@ -411,9 +411,9 @@ result_ecologic$landUse %>% gather(key = landCoverOption, value = landCoverShare
   guides(fill=guide_legend(title=""))
 ```
 
-*Fig. 8: Composition of the optimized farm (based on data of Gosling et al. (2020)), including only ecologic indicators. Each land-cover option is shown in an allocated share (%).*
+*Fig. 8: Composition of the optimized farm (based on data of Gosling et al. (2020)), including only ecological indicators. Each land-cover option is shown in an allocated share (%).*
 
-As the second example, the ecological indicator group leads to a land-cover portfolio comprising forests only (Fig. 8; corresponds to Fig. 5 of Gosling et al. (2020)). It can be concluded that all contributions of all other land-cover alternatives in all scenarios (even the optimistic ones) to the ecological indicators are lower than these of forests. The land-cover composition of the ecologic bundle differs fundamentally from the currently observed portfolio. The ecological indicators are therefore apparently not sufficient to approximate the farmers' current perceptions.
+As the second example, the ecological indicator group leads to a land-cover portfolio comprising of only forests (Fig. 8; corresponds to Fig. 5 of Gosling et al. (2020)). It can be concluded that all contributions of all other land-cover alternatives in all scenarios (even the optimistic ones) to the ecological indicators are lower than those of forests. The land-cover composition of the ecologic bundle differs fundamentally from the currently observed portfolio. The ecological indicators are therefore apparently not sufficient to approximate the farmers' current perceptions.
 
 ### Immediate Economic Success
 
@@ -447,11 +447,11 @@ result_short$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1
 
 *Fig. 9: Composition of the optimized farm (based on data of Gosling et al. (2020)), including the prospective relevant indicators of the farmers only. Each land-cover option is shown in an allocated share (%).*
 
-The third example is composed of a bundle of indicators that prospectively reflect the farmer's needs and perceptions (Fig. 9). Corresponding to Fig. 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate immediate economic success. Indeed, the land-cover composition of this portfolio reflects the portfolio observed in Eastern Panama best. Hence, these indicators best reflect the farmers' goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multifunctional portfolio (Fig. 2) highlights the requirements a land-cover alternative must fulfill to meet the farmers' requirements and goals. The silvopasture, as defined in Gosling et al. (2020), may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher than long-term profit and economic stability, pasture outperforms silvopasture in the immediate return scenario. Policies or development plans may consider these indicators key elements when promoting landscape development toward multifunctional landscapes.
+The third example is composed of a bundle of indicators that prospectively reflect the farmer's needs and perceptions (Fig. 9). Corresponding to Fig. 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate immediate economic success. Indeed, the land-cover composition of this portfolio best reflects the portfolio observed in Eastern Panama. Hence, these indicators best reflect the farmers' goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multifunctional portfolio (Fig. 2) highlights the requirements a land-cover alternative must fulfill to meet the farmers' requirements and goals. The silvopasture, as defined in Gosling et al. (2020), may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher than long-term profit and economic stability, pasture outperforms silvopasture in the immediate return scenario. Policies or development plans may consider these indicators key elements when promoting landscape development toward multifunctional landscapes.
 
 ### The use of fixDistance
 
-It can be advantageous to define distinct uncertainty levels for the calculation of the distances to the maximum achievable level (the reference) $d_{iu}$ (Equation 3 in Husmann et al. (n.d.)) and the actual distances under a certain land-cover composition $R_{liu}$ (Equation 5 in Husmann et al. (n.d.), see also Equation 9). Too narrow uncertainty spaces of $R_{liu}$ could restrict the state space of the distances too strictly. The broader uncertainty spaces allow for higher freedom of $R_{liu}$, which allows to cover more land-cover compositions. The distances are thus allowed to be higher. This usually results in a more similar composition of the land-cover composition with similar levels of uncertainty. The transitions between the portfolios under raising uncertainty values are smoother. Disadvantage of distinct uncertainty spaces is that the distances cannot be interpreted straightforwardly any more. The different uncertainty spaces considered in the denominator and the counter of Equation 3 (Husmann et al., n.d.) lead to distances that are not inevitably in the interval {0, 1} anymore.
+It can be advantageous to define distinct uncertainty levels for the calculation of the distances to the maximum achievable level (the reference) $d_{iu}$ (Equation 3 in Husmann et al. (n.d.)) and the actual distances under a certain land-cover composition $R_{liu}$ (Equation 5 in Husmann et al. (n.d.), see also Equation 9). Too narrow uncertainty spaces of $R_{liu}$ could restrict the state space of the distances too strictly. The broader uncertainty spaces allow for higher freedom of $R_{liu}$, which allows to cover more land-cover compositions. The distances are thus allowed to be higher. This usually results in a more similar composition of the land-cover composition with similar levels of uncertainty. The transitions between the portfolios under rising uncertainty values are smoother. The disadvantage of distinct uncertainty spaces is that the distances can no longer be straightforwardly  interpreted. The distances calculated using different uncertainty spaces considered in the denominator and the counter of Equation 3 (Husmann et al., n.d.) cannot be interpreted as degree of fulfillment any more.
 
 ```{r, fig.height = 5, fig.width = 7}
 
@@ -490,7 +490,7 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
 
 *Fig. 10: Theoretically ideal farm compositions using the fixDistance argument and increasing levels of uncertainty.*
 
-It can be seen that the land-cover allocation transition under increasing uncertainty levels (Fig. 10) differs slightly from the multifunctional scenario shown above (Fig. 2). The here broadened state space leads a higher share of pasture under low uncertainty levels as compared to the multifunctional portfolio above (Fig. 5).
+It can be seen that the land-cover allocation transition under increasing uncertainty levels (Fig. 10) differs slightly from the multifunctional scenario shown above (Fig. 2). The here broadened state space leads to a higher share of pasture under low uncertainty levels as compared to the multifunctional portfolio above (Fig. 5).
 
 <h3><a name="7. Suggested">5. Suggested Citation </a></h3>
 
